# openai-fine-tuning-framework

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/price_estimation/: README.md  config.yaml  formatter.py  run.py
examples/sentiment_classification/: README.md  config.yaml  formatter.py  run.py
src/openai_ft/: __init__.py  __main__.py  cli.py  client.py  config.py  datasets.py  evaluator.py  exceptions.py  formatters.py  inference.py  jsonl.py  logging_utils.py  metrics.py  pipeline.py  trainer.py  uploader.py
tests/: conftest.py  test_config.py  test_datasets.py  test_evaluator.py  test_formatters.py  test_jsonl.py  test_metrics.py
