[project]
name = "openai-fine-tuning-framework"
version = "0.1.0"
description = "A production-grade, generic framework for fine-tuning OpenAI chat models on arbitrary tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arneesh Aima" }]
keywords = ["openai", "fine-tuning", "llm", "gpt", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
huggingface = ["datasets>=2.19.0", "huggingface-hub>=0.23.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
openai-ft = "openai_ft.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/openai-fine-tuning-framework"
Issues = "https://github.com/your-org/openai-fine-tuning-framework/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_ft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "ARG",  # flake8-unused-arguments
]
ignore = ["E501"] # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "ARG002", "ARG005", "B017"]
# typer uses function-call defaults and Optional[...] idiomatically
"src/openai_ft/cli.py" = ["B008", "UP007", "UP045", "FA100", "ARG001"]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["datasets.*", "huggingface_hub.*"]
ignore_missing_imports = true
